add some sections to mk(1)

--- a/mk.1
+++ b/mk.1
@@ -76,13 +76,35 @@ Print the expanded value of
 .Ar var
 to the standard output and exit.
 .El
+.Sh DEPENDENCY LINES
+TODO
+.Sh SHELL COMMANDS
+TODO
+.Sh INFERENCE RULES
+TODO
+.Sh VARIABLE ASSIGNMENTS
+TODO
+.Sh INCLUDE STATEMENTS
+TODO
+.Sh SUBDIRECTORIES
+TODO
+.Sh CONDITIONALS
+TODO
+.Sh COMMENTS
+TODO
+.Ss DOC COMMENTS
+TODO
+.Sh SPECIAL TARGETS
+TODO
 .Sh ENVIRONMENT
+TODO
 .Sh FILES
 .Bl -tag -width Mkfile -compat
 .It Pa Mkfile
 default makefile
 .El
 .Sh EXAMPLES
+TODO
 .Sh EXIT STATUS
 .Ex -std
 .Sh SEE ALSO
