--- a/mk.1
+++ b/mk.1
@@ -447,4 +447,6 @@ Create a second implementation in Rust, which will support parallel execution of
 Create a comparison to other makes.
 .It
 See TODO.md file.
+.It
+Optional prerequisites (continue even if the prerequisite failed).
 .El
