--- a/mk.1
+++ b/mk.1
@@ -204,9 +204,10 @@ A list of subdirectories specified by the
 .Ic .SUBDIRS:
 directive.
 .It ${\fB.EXPORTS\fR}
-A list of variable names specified by the
+A list of variables specified by the
 .Ic .EXPORTS:
 directive.
+This is useful for invoking other build systems in foreign subdirectories.
 .It ${\fB.OBJDIR\fR}
 The object directory specified by the
 .Fl o Ar objdir
